Portfolio-C/src/styles.css
body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
}

section {
    background-color: white;
    border: solid black 1px;
}

.hero {
    background-color: #000000;
    height: 100vh;
    color: white;
    font-size: 50px;
}

footer {
    background-color: #0e1a40;
    color: white;
    text-align: center;
    padding-bottom: 25px;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    background-color: #946b2d;
}

ul {
    display: flex;
    list-style-type: none;
    width: 500px;
    justify-content: space-around;
    font-size: 20px;
}

ul.show {
    display: block;
}

li {
    text-decoration: none;
}

h1 {
    font-weight: bolder;
    margin: 0;
}

h2 {
    font-size: 50px;
    margin: 0px;
}

p {
    margin: 0;
    font-weight: 300;
    font-size: 40px;
}

/* used for projects later
.subtext {
    font-size: 15px;
    font-weight: 300;
}
*/
.hero-area {
    display: flex;
    height: 100%;
    justify-content: space-between;
    align-items: center;
}

.hero-text {
    margin-left: 5px;
    margin-bottom: 100px;
}

.button {
    width: 200px;
    height: 50px;
    border-radius: 100px;
    background-color: #5d5d5d;
    text-align: center;
    font-size: 30px;
    font-weight: 300;
    padding-top: 5px;
    margin-top: 20px;
    text-shadow: none;
}

.button:hover {
    background-color: #946b2d;
}

.button:active {
    background-color: white;
    color: white;
}

.socials {
    padding-bottom: 200px;
}

.logo {
    height: 40px;
    margin: 10px;
}

.social {
    margin: 20px;
}

.sub-section {
    display: flex;
    /*
    justify-content: space-around;
    padding: 80px;
    */
    flex-direction: column;
    text-align: center;
    padding: 80px;
}

.sub-section-alternative {
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 80px;
    background-color: white;
}

.headshot {
    width: 300px;
    border-radius: 100px;
}

.headshot-container {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.project-card {
    width: 200px;
    height: 500px;
    border: 1px solid black;
    box-shadow: 5px 5px 20px;
}

.project-container {
    display: flex;
    justify-content: space-around;
}

@media only screen and (max-width: 1000px) {
    .project-container {
        display: flex;
        flex-wrap: wrap;
    }

}

/* project cards; need to build more projects
.project-image {
    margin-top: 25px;
    width: 250px;
    border-radius: 125px;
}

hr {
    margin-left: 20px;
    margin-right: 20px;
}

.project-link {
    text-decoration: none;
    color: #ef744b;
}
*/

a {
    text-decoration: none;
    color: white;
}

.hamburger {
    display: none;
}

.hamburger:focus {
    outline: 0;
}

@media only screen and (max-width: 1000px) {
    .hamburger {
        display: block;
        border: 0;
        background-color: transparent;
        color: white;
        font-size: 30px;
        margin: 10px;
    }

    ul {
        display: none;
        background-color: #000000;
        margin: 0px;
        font-size: small;
    }

    ul.show {
        display: block;
        align-self: flex-end;
    }

    nav {
        align-items: flex-start;
        background-color: #946b2d;
    }

    .logo {
        display: block;
    }
}

.contactbox {
    display: flex;
    justify-content: center;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
}

